Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27021

Syntax highlighting doesn't match code model

XMLWordPrintable

    • 64fee150ef (qt-creator/qt-creator/7.0) 64fee150ef (qt-creator/qt-creator/master) 64fee150ef (qt-creator/tqtc-qt-creator/7.0) 64fee150ef (qt-creator/tqtc-qt-creator/master) 64fee150ef (qt-creator/tqtc-qt-creator/qds-3.1)

      See the screenshot:

      Note how the section:

      # endif
      
      #  include "qsimd_x86_p.h"
      

      And the comment that follows are greyed out, when that makes no sense. That endif terminated the non-greyed #ifdef two lines above. Moreover, the #include "qsimd_x86_p.h" is clickable, meaning it is understood in the code model (and so are all the constants coming from that file), whereas the previous #include isn't.

      Moreover, note the context at the top: it's talking about the variable CpuFeatureArchHaswell, which is not the first first variable below this context (there's one before it).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes